Implementation based on component