@@ -5,8 +5,11 @@ plugins {
     id "com.google.protobuf" version "0.8.13"
 }
 
+apply from: 'gradle/java8.gradle'
+
 group = "com.github.loki4j"
 version = "${file("VERSION").text.trim()}"
+description = 'Loki4j aims to be the fastest and the most lightweight implementation of Logback Appender for Loki'
 
 repositories {
      mavenCentral()
@@ -18,13 +21,6 @@ sourceSets {
             srcDirs += ["$buildDir/generated/source/proto/main/java"]
         }
     }
-    java8 {
-        compileClasspath = sourceSets.main.compileClasspath
-        java {
-            srcDirs = sourceSets.main.java.srcDirs
-            exclude '**/LokiJavaHttpAppender.java'
-        }
-    }
 }
 
 dependencies {
@@ -33,8 +29,6 @@ dependencies {
     compileOnly 'com.google.protobuf:protobuf-java:3.12.4'
     compileOnly 'org.xerial.snappy:snappy-java:1.1.8'
     compileOnly 'org.apache.httpcomponents:httpclient:4.5.13'
-
-    java8AnnotationProcessor 'com.github.bsideup.jabel:jabel-javac-plugin:0.3.0'
 
     testImplementation 'junit:junit:4.13'
 }
@@ -46,33 +40,9 @@ compileJava {
     targetCompatibility = 11
 }
 
-compileJava8Java {
-    sourceCompatibility = 8
-    targetCompatibility = 8
-
-    options.compilerArgs = [
-            "--release", "8", // Avoid using Java 9+ APIs
-            '--enable-preview',
-    ]
-    // The following line can be omitted on Java 14 and higher
-    options.compilerArgs << '-Xplugin:jabel'
-
-    doFirst {
-        options.compilerArgs = options.compilerArgs.findAll {
-            it != '--enable-preview'
-        }
-    }
-}
-
 java {
     withJavadocJar()
     withSourcesJar()
-
-    registerFeature('jdk8') {
-        usingSourceSet(sourceSets.java8)
-        withJavadocJar()
-        withSourcesJar()
-    }
 }
 
 jar {
@@ -92,7 +62,6 @@ publishing {
             from components.java
             pom {
                 name = 'Logback Appender for Loki'
-                description = 'This project aims to be the fastest and the most lightweight implementation of Logback Appender for Loki'
                 url = 'https://github.com/loki4j/loki-logback-appender'
                 licenses {
                     license {
